test/functions/iterators/bradc/onInIterator2.good
onInIterator2.chpl:1: In iterator 'foo':
onInIterator2.chpl:3: error: invalid use of 'yield' within 'on' in serial iterator
